--- a/index.html
+++ b/index.html
@@ -267,19 +267,19 @@
           </div>
         </div>
         <div class="place">
-          <h2 class="place__title">Зимний Байкал</h2>
+          <h2 class="place__title">Карелия</h2>
           <div class="website">
             <a
-              href="https://vk.com/baikalmile"
+              href="http://vodlozero.ru"
               target="_blank"
               class="website__url-heading"
               >URL</a
             >
             <a
-              href="https://vk.com/baikalmile"
+              href="http://vodlozero.ru"
               target="_blank"
               class="website__link"
-              >https://vk.com/baikalmile</a
+              >http://vodlozero.ru</a
             >
           </div>
         </div>
