--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <main class="main">
       <!-- section lead -->
       <section class="lead">
-        <h1 class="section-title">Путешествия по России</h1>
-        <p class="section-subtitle">
+        <h1 class="lead__title">Путешествия по России</h1>
+        <p class="lead__subtitle">
           Настоящая страна не в выпусках новостей, а здесь.
         </p>
         <div class="lead__illustration"></div>
